--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </p>
   </header>
 
-  <h2>NBA Shooting Trends from 2000 - 2020</h2>
+  <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and the mid-range shots are becoming less common.</p>
 
   <div id="observablehq-viewof-curYear-af51d8ec"></div>
