--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
     </p>
   </header>
-
+  <section>
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and the mid-range shots are becoming less common.</p>
 
@@ -46,7 +46,7 @@
     if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-7c7aa20e"));
   });
   </script>
-
+  </section>
   <footer>
     <p>
       <a href="https://gitlab.cs.washington.edu/cse442/24au/fp/NBA-Shooting-Trends">Repository</a>
