added another section

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,10 @@
       <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
     </p>
   </header>
+  <section>
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
+  </section>
   <section>
   <div id="observablehq-viewof-curYear-6223500f"></div>
   <p>Credit: <a href="https://observablehq.com/d/364551627e9196c4@409">NBA SHOT CHARTS by Michael Cassel</a></p>
