Update index.html 2nd viz again

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,9 @@
     if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-e639fb10"));
   });
   </script>
+  </section>
 
+  <section>
   <div id="observablehq-viz-0a335950"></div>
   <p>Credit: <a href="https://observablehq.com/d/68ed76fd235ac449@115">Interactive SVG by Aparna</a></p>
 
@@ -60,6 +62,7 @@
   });
   </script>
   </section>
+  
   <footer>
     <p>
       <a href="https://gitlab.cs.washington.edu/cse442/24au/fp/NBA-Shooting-Trends">Repository</a>
