--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,19 @@
   });
   </script>
   </section>
-  
+  <section>
+    <div id="observablehq-viewof-yrInput-febeacb2"></div>
+    <div id="observablehq-chart-febeacb2"></div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/bd8548f4c7d9e327@50.js?v=4";
+    new Runtime().module(define, name => {
+      if (name === "viewof yrInput") return new Inspector(document.querySelector("#observablehq-viewof-yrInput-febeacb2"));
+      if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-febeacb2"));
+    });
+</script>
+  </section>
   <footer>
     <p>
       <a href="https://gitlab.cs.washington.edu/cse442/24au/fp/NBA-Shooting-Trends">Repository</a>
