--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
   });
   </script>
   </section>
+  <div>
+    <img src="./FPBackground.png" width="800px">
+  </div>
 
   <section>
   <div id="observablehq-viz-0a335950"></div>
