--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" width="100%">
 
 <head>
   <meta charset="UTF-8" />
@@ -22,7 +22,7 @@
 <!-- You are free to modify this template however you want! -->
 <!------------------------------------------------------------>
 
-<body>
+<body width="100%">
   <header>
     <h1><a href=".">How has NBA Basketball Changed Since 2000?</a></h1>
 
