tried centering some things

--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,16 @@
       <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
     </p>
   </header>
-  <section>
+  <section margin="0 auto">
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
   </section>
   <section>
-  <div id="observablehq-viewof-curYear-e639fb10"></div>
-  <div id="observablehq-chart-e639fb10"></div>
+  
+  <div id="shotchart" margin="0 auto">
+    <div id="observablehq-viewof-curYear-e639fb10"></div>
+    <div id="observablehq-chart-e639fb10"></div>
+  </div>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
   <script type="module">
@@ -49,7 +52,7 @@
   </script>
   </section>
   <div>
-    <img src="./FPBackground.png" width="1600px">
+    <img src="./FPBackground.png" width="1600px" margin="0 auto">
   </div>
 
   <section>
