--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,13 @@
       <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
     </p>
   </header>
-  <section margin="0 auto">
+  <section margin="auto" text-align="center">
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
   </section>
   <section>
   
-  <div id="shotchart" margin="0 auto">
+  <div id="shotchart" margin="auto">
     <div id="observablehq-viewof-curYear-e639fb10"></div>
     <div id="observablehq-chart-e639fb10"></div>
   </div>
@@ -51,8 +51,8 @@
   });
   </script>
   </section>
-  <div>
-    <img src="./FPBackground.png" width="1600px" margin="0 auto">
+  <div margin="auto">
+    <img src="./FPBackground.png" width="70%" margin="auto">
   </div>
 
   <section>
