--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
   </section>
-  <section>
+  <section width="100%">
   
   <div id="shotchart" margin="auto">
     <div id="observablehq-viewof-curYear-e639fb10"></div>
@@ -51,8 +51,8 @@
   });
   </script>
   </section>
-  <div margin="auto">
-    <img src="./FPBackground.png" width="70%" margin="auto">
+  <div>
+    <img src="./FPBackground.png" width="70%" margin-left="15%">
   </div>
 
   <section>
