--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
     </p>
   </header>
-  <section style="margin: 'auto', text-align: 'center'">
+  <section style="margin: 'auto'; text-align: 'center'">
   <h2>NBA Shooting Trends from 2000-2020</h2>
   <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
   </section>
