--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </section>
   <section width="100%">
   
-  <div id="shotchart" style="margin: auto">
+  <div id="shotchart" width="70%" style="margin: auto">
     <div id="observablehq-viewof-curYear-e639fb10"></div>
     <div id="observablehq-chart-e639fb10"></div>
   </div>
