--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <section width="100%">
   
   <div id="shotchart" style="margin: auto; width: 70%">
-    <div id="observablehq-viewof-curYear-e639fb10" style="margin-left: 15%"></div>
+    <div id="observablehq-viewof-curYear-e639fb10" style="margin: auto"></div>
     <div id="observablehq-chart-e639fb10"></div>
   </div>
 
