--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <!------------------------------------------------------------>
 
 <body width="100%">
-  <div style="background-color: white; width: 70%">
+  <div style="background-color: white; width: 70%; height: 100%; margin: auto">
     <header>
       <h1><a href=".">How has NBA Basketball Changed Since 2000?</a></h1>
 
