--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,10 @@
         <strong>Team Members</strong>: Leo Cassel, Raymond Phu, Aparna Krishnan
       </p>
     </header>
+    <p>Founded in 1949, the National Basketball Association (NBA) is the most prominent professional basketball league that showcases the best talent from around the world. Over the course of its 75 year history, we have seen some dramatic changes in the way that basketball is played and organized at the highest level. The league that was once composed of only 11 teams has now expanded to include 30 billion-dollar franchises. All-time great players have made their mark on the NBA, where their unique play styles and personalities have altered the way that people play basketball around the world. Specifically, the NBA has rapidly changed its style both on and off the court over the last 25 years due to an ever-reformed rulebook and an increased focus on game statistics. In this article, we are aiming to convey some of the most major transformations that have taken place in the NBA in the 21st century by presenting interactive visualizations and detailed explanations of our findings.</p>
     <section style="margin: auto; text-align: center">
-    <h2>NBA Shooting Trends from 2001-2020</h2>
-    <p>Notice how the corner 3 pointers have become more popular, and mid-range shots are becoming less common.</p>
+    <h2>NBA Shooting: Rise of the Three-Pointer</h2>
+    <p>One of the most essential aspects of NBA basketball is shooting, as that is the only way to score points for your team. Some shots are smarter than others, so over time NBA players have adapted their play style to favor shots that put their team in the best position to win games. With great deep-shooters like Steph Curry becoming more common in recent years, many believe that the NBA has transformed itself into a 3-point shooting league where most shots come from beyond the arc. I sought to determine if this was true, so I compiled playoff shot location data from the 2001 Playoffs all the way until the 2020 Playoffs to see how shot charts changed over the years. The chart below displays this information by breaking the NBA court into 15 distinct zones and labels the popularity of each one. The popularities are represented as percentages which show what percent of the total shots attempted in a given year came from that zone.</p>
     </section>
     <section width="100%">
     
@@ -41,6 +42,8 @@
       <div id="observablehq-viewof-curYear-e639fb10" style="margin: auto; width: 298px"></div>
       <div id="observablehq-chart-e639fb10"></div>
     </div>
+
+    <p>The most obvious trend that can be deduced from this chart is the rise of 3-point shots coming from the right side of the court. When comparing the 2001 and 2021 playoffs, we can see that these shots more than doubled their prevalence as they went from a combined 7% popularity in 2001 to a 17% popularity in 2021. I decided to further investigate this topic by finding data on regular-season shooting averages for every year since the 2000-2001 NBA season. Specifically, I directed my attention at the “Average Percentage of FGA Coming from 3-pointers” metric. This represents what percentage of shot attempts come from 3-pointers for the average NBA player during a given season. I transformed this data into the visualization below:</p>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
     <script type="module">
@@ -52,6 +55,9 @@
     });
     </script>
     </section>
+
+    <p>From this graph, we can see that the percentage of shots taken from beyond the arc has steadily increased from only 17% in the 2000-2001 regular season to 42.3% in the current NBA season. Something important to note is that this number increased quickly from 2012 to 2019, but seems to have tapered off at around 39% for the last several complete seasons. Based on the evidence provided in these two visualizations, we can definitely say that the percentage of three pointers attempted per game has risen dramatically over the last 25 years of NBA history.</p>
+    
     <div>
       <img src="./FPBackground.png" width="70%" style="margin-left: 15%">
     </div>
