--- a/public/index.html
+++ b/public/index.html
@@ -74,16 +74,18 @@
     </script>
     </section>
     <section>
-      <div id="observablehq-viewof-yrInput-febeacb2"></div>
-      <div id="observablehq-chart-febeacb2"></div>
+      <div id="observablehq-viewof-yrInput-9c3a0a53"></div>
+      <div id="observablehq-chart-9c3a0a53"></div>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
       <script type="module">
       import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-      import define from "https://api.observablehq.com/d/bd8548f4c7d9e327@50.js?v=4";
+      import define from "https://api.observablehq.com/d/ed740fc9f40460ba.js?v=4";
       new Runtime().module(define, name => {
-        if (name === "viewof yrInput") return new Inspector(document.querySelector("#observablehq-viewof-yrInput-febeacb2"));
-        if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-febeacb2"));
+        if (name === "viewof yrInput") return new Inspector(document.querySelector("#observablehq-viewof-yrInput-9c3a0a53"));
+        if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-9c3a0a53"));
       });
+</script>
+</script>
   </script>
   <p>
     Over the past 20 years, the NBA has undergone significant changes, particularly in key metrics such as Pace, Field Goals Attempted (FGA), Three-Point Attempts (3PA), and Points Per Game (PPG). The league has shifted toward faster gameplay, with an increased pace resulting in more possessions per game. Teams are attempting more shots overall, with a dramatic rise in three-point attempts, reflecting the influence of analytics that emphasize the efficiency of perimeter shooting. These changes have contributed to higher scoring averages, making the modern NBA faster, more offensively oriented, and heavily reliant on three-point shooting compared to two decades ago.
