--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,8 @@
       if (name === "viz") return new Inspector(document.querySelector("#observablehq-viz-0318bcb0"));
     });
     </script>
+
+    <p>Another noteworthy trend in the NBA over the past 25 years is the general increase in trades over the years, with some fluctuation. In the early 2000s, the number of trades per season was around 30, but in recent years, this number has risen significantly, with the peak being at at 67 trades during the 2014-15 season. An important trend to note is the gradual increase in trades from 2010 onward. In the above visualiation, it is clear that trade activity in the NBA has become much more frequent compared to the 2000s, reflecting the evolving dynamics of team-building strategies in professional basketball.</p>
     </section>
     <section>
       <div id="observablehq-viewof-yrInput-9c3a0a53"></div>
