--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,12 @@
   <p>
     Over the past 20 years, the NBA has undergone significant changes, particularly in key metrics such as Pace, Field Goals Attempted (FGA), Three-Point Attempts (3PA), and Points Per Game (PPG). The league has shifted toward faster gameplay, with an increased pace resulting in more possessions per game. Teams are attempting more shots overall, with a dramatic rise in three-point attempts, reflecting the influence of analytics that emphasize the efficiency of perimeter shooting. These changes have contributed to higher scoring averages, making the modern NBA faster, more offensively oriented, and heavily reliant on three-point shooting compared to two decades ago.
   </p>
+
+  <h2>
+    <p>Data Sources:</p>
+    <p>For percentage of shots that come from 3 pointers - https://www.basketball-reference.com/</p>
+    <p>For shot location data - https://www.kaggle.com/datasets/techbaron13/nba-shots-dataset-2001-present</p>
+  </h2>
     </section>
     <footer>
       <p>
