--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <p>From this graph, we can see that the percentage of shots taken from beyond the arc has steadily increased from only 17% in the 2000-2001 regular season to 42.3% in the current NBA season. Something important to note is that this number increased quickly from 2012 to 2019, but seems to have tapered off at around 39% for the last several complete seasons. Based on the evidence provided in these two visualizations, we can definitely say that the percentage of three pointers attempted per game has risen dramatically over the last 25 years of NBA history.</p>
 
     <section>
-    <div id="observablehq-viz-ccd2ca81" style="margin: auto; width: 70%"></div>
+    <div id="observablehq-viz-ccd2ca81" style="margin-left: 15%; width: 70%"></div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
     <script type="module">
     import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
@@ -92,11 +92,9 @@
     Over the past 20 years, the NBA has undergone significant changes, particularly in key metrics such as Pace, Field Goals Attempted (FGA), Three-Point Attempts (3PA), and Points Per Game (PPG). The league has shifted toward faster gameplay, with an increased pace resulting in more possessions per game. Teams are attempting more shots overall, with a dramatic rise in three-point attempts, reflecting the influence of analytics that emphasize the efficiency of perimeter shooting. These changes have contributed to higher scoring averages, making the modern NBA faster, more offensively oriented, and heavily reliant on three-point shooting compared to two decades ago.
   </p>
 
-  <h2>
-    <p>Data Sources:</p>
+    <h2>Data Sources:</h2>
     <p>For percentage of shots that come from 3 pointers - https://www.basketball-reference.com/</p>
     <p>For shot location data - https://www.kaggle.com/datasets/techbaron13/nba-shots-dataset-2001-present</p>
-  </h2>
     </section>
     <footer>
       <p>
