--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     </section>
     <section width="100%">
     
-    <div id="shotchart" style="margin: auto; width: 70%">
+    <div id="shotchart" style="margin: auto; width: fit-content">
       <div id="observablehq-viewof-curYear-e639fb10" style="margin: auto; width: 298px"></div>
       <div id="observablehq-chart-e639fb10"></div>
     </div>
@@ -63,7 +63,7 @@
     <p>From this graph, we can see that the percentage of shots taken from beyond the arc has steadily increased from only 17% in the 2000-2001 regular season to 42.3% in the current NBA season. Something important to note is that this number increased quickly from 2012 to 2019, but seems to have tapered off at around 39% for the last several complete seasons. Based on the evidence provided in these two visualizations, we can definitely say that the percentage of three pointers attempted per game has risen dramatically over the last 25 years of NBA history.</p>
 
     <section>
-    <div id="observablehq-viz-ccd2ca81" style="width: 70%; margin-left: 18%"></div>
+    <div id="observablehq-viz-ccd2ca81" style="width: fit-content; margin: auto"></div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
     <script type="module">
     import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
