--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
     <p>From this graph, we can see that the percentage of shots taken from beyond the arc has steadily increased from only 17% in the 2000-2001 regular season to 42.3% in the current NBA season. Something important to note is that this number increased quickly from 2012 to 2019, but seems to have tapered off at around 39% for the last several complete seasons. Based on the evidence provided in these two visualizations, we can definitely say that the percentage of three pointers attempted per game has risen dramatically over the last 25 years of NBA history.</p>
 
     <section>
+    <h2 style="text-align: center">Player Mobility: Growth of NBA Trade Market</h2>
     <div id="observablehq-viz-ccd2ca81" style="width: fit-content; margin: auto"></div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
     <script type="module">
@@ -75,6 +76,7 @@
     </section>
     <p>Another noteworthy trend in the NBA over the past 25 years is the general increase in trades over the years, with some fluctuation. In the early 2000s, the number of trades per season was around 30, but in recent years, this number has risen significantly, with the peak being at at 67 trades during the 2014-15 season. An important trend to note is the gradual increase in trades from 2010 onward. In the above visualiation, it is clear that trade activity in the NBA has become much more frequent compared to the 2000s, reflecting the evolving dynamics of team-building strategies in professional basketball.</p>
     <section>
+      <h2 style="text-align: center">Game Tempo: Increase in Pace and PPG</h2>
       <div id="observablehq-viewof-yrInput-9c3a0a53"></div>
       <div id="observablehq-chart-9c3a0a53"></div>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
