--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
     <p>Another noteworthy trend in the NBA over the past 25 years is the general increase in trades over the years, with some fluctuation. In the early 2000s, the number of trades per season was around 30, but in recent years, this number has risen significantly, with the peak being at at 67 trades during the 2014-15 season. An important trend to note is the gradual increase in trades from 2010 onward. In the above visualiation, it is clear that trade activity in the NBA has become much more frequent compared to the 2000s, reflecting the evolving dynamics of team-building strategies in professional basketball.</p>
     <section>
       <h2 style="text-align: center">Game Tempo: Increase in Pace and PPG</h2>
+      <p>In the visualization below, each line represents the averages of one team's season. So in total there are 30 lines per year, which correspond to each of the 30 NBA team averages for every year. Thus, we can use this graph to determine how the team averages change over time from 2000 to 2020 in the four specified statistical categories.</p>
       <div id="observablehq-viewof-yrInput-9c3a0a53"></div>
       <div id="observablehq-chart-9c3a0a53"></div>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
