--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
     <h2 style="text-align: center">Data Sources</h2>
     <p>For shot location data - <a href="https://www.kaggle.com/datasets/techbaron13/nba-shots-dataset-2001-present">Kaggle NBA Shots Dataset</a></p>
     <p>For percentage of shots that come from 3 pointers - <a href="https://www.basketball-reference.com/">Basketball Reference</a></p>
+    <p>For data in the parallel coordinate plot  - <a href="https://www.statmuse.com/nba/">Statemuse</a></p>
     </section>
     <footer>
       <p>
