--- a/public/index.html
+++ b/public/index.html
@@ -78,16 +78,19 @@
     <section>
       <h2 style="text-align: center">Game Tempo: Increase in Pace and PPG</h2>
       <p>In the visualization below, each line represents the averages of one team's season. So in total there are 30 lines per year, which correspond to each of the 30 NBA team averages for every year. Thus, we can use this graph to determine how the team averages change over time from 2000 to 2020 in the four specified statistical categories.</p>
-      <div id="observablehq-viewof-yrInput-9c3a0a53"></div>
-      <div id="observablehq-chart-9c3a0a53"></div>
+      <div id="observablehq-viewof-yrInput-04c7ebaf"></div>
+      <div id="observablehq-chart-04c7ebaf"></div>
+      <p>Credit: <a href="https://observablehq.com/d/ed740fc9f40460ba@123">Untitled by Raymond</a></p>
+
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
       <script type="module">
       import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-      import define from "https://api.observablehq.com/d/ed740fc9f40460ba.js?v=4";
+      import define from "https://api.observablehq.com/d/ed740fc9f40460ba@123.js?v=4";
       new Runtime().module(define, name => {
-        if (name === "viewof yrInput") return new Inspector(document.querySelector("#observablehq-viewof-yrInput-9c3a0a53"));
-        if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-9c3a0a53"));
+        if (name === "viewof yrInput") return new Inspector(document.querySelector("#observablehq-viewof-yrInput-04c7ebaf"));
+        if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-04c7ebaf"));
       });
+</script>
 </script>
 </script>
   </script>
